# stock-manager

./: Cargo.toml  sp500.dec.2022.csv  test.csv
src/: main.rs
