[package]
authors = ["RuRu <ruslan.jon@hotmail.com>"]
name = "stock-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = {version = "3.1.8", features = ["derive"]}
yahoo_finance_api = { version = "1.6.1" }
tokio = { version = "1.28", features = ["full"] }
async-trait = "0.1.68"
time = "0.3.20"
futures = "0.3.28"